--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation("com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0") //for JVM platform
+    implementation 'org.apache.commons:commons-csv:1.5'
 
 }
