--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        dataBinding = true
+        viewBinding = true
     }
 }
 
@@ -54,11 +55,9 @@ dependencies {
 
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation("com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0") //for JVM platform
+    implementation("com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0")
     implementation 'org.apache.commons:commons-csv:1.5'
-
-//    val nav_version = "2.4.2"
-//    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
-//    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1")
+    implementation("io.ktor:ktor-client-core:1.5.2")
+    implementation 'com.android.volley:volley:1.2.1'
 }
