--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.camera:camera-core:1.0.2'
+    implementation 'androidx.camera:camera-lifecycle:1.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -60,4 +62,8 @@ dependencies {
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1")
     implementation("io.ktor:ktor-client-core:1.5.2")
     implementation 'com.android.volley:volley:1.2.1'
+    implementation "androidx.camera:camera-view:1.2.0-alpha01"
+    implementation "androidx.camera:camera-camera2:1.2.0-alpha01"
+
+
 }
