flashlight toggle added

--- a/android_empon_ta/app/src/main/AndroidManifest.xml
+++ b/android_empon_ta/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-feature android:name="android.hardware.camera.any" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
@@ -21,7 +25,8 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Empon_app">
+        android:theme="@style/Theme.Empon_app"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.detect.TakePhotoActivity"
             android:exported="true">
