--- a/android_empon_ta/app/src/main/AndroidManifest.xml
+++ b/android_empon_ta/app/src/main/AndroidManifest.xml
@@ -29,12 +29,12 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.detect.TakePhotoActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +43,8 @@
         </activity>
         <activity
             android:name=".ui.OnboardingActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
